--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "dev": "concurrently \"nodemon server.js\" \"cd client && npm run start\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
